fix card wrapping issue by fixing HTML structure

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,6 +1,4 @@
 .menu {
-  height: 800px;
-  width: 100%;
   background-color: #fff;
   box-sizing: border-box;
   background-image: url(../images/background_menu.svg);
